# bowling_simulator

./: README.md
Project/: CMakeLists.txt  Makefile  OBJParser.cpp  OBJParser.hpp  Pin.mtl  Project.cbp  Project.depend  Project.layout  SimpleVertexShader.vertexshader  Solid.cpp  arrow.mtl  ball.mtl  build&run.txt  main  main.cpp  objParser.cpp  plane.mtl  solid.cpp  solid.hpp
Project/include/: SimpleFragmentShader.fragmentshader  solid.hpp
Project/src/: objParser.cpp  shader.cpp  solid.cpp
Project/textures/: wood.raw
